--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
     "@nx/js": "19.8.14",
+    "@nx/react": "^19.8.14",
     "@nx/workspace": "19.8.14",
     "nx": "19.8.14"
+  },
+  "dependencies": {
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   }
 }
