--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@cavallanti-ui/": ["packages/grid/src/index.ts"],
-      "@cavallanti-ui/button": ["packages/button/src/index.ts"]
+      "@cavallanti-ui/button": ["packages/button/src/index.ts"],
+      "@cavallanti-ui/header": ["packages/header/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
