--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@nx/jest": "19.8.14",
     "@nx/js": "19.8.14",
     "@nx/react": "^19.8.14",
+    "@nx/rollup": "19.8.14",
     "@nx/vite": "19.8.14",
     "@nx/web": "19.8.14",
     "@nx/workspace": "19.8.14",
+    "@rollup/plugin-url": "^8.0.2",
+    "@svgr/rollup": "^8.1.0",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
@@ -37,6 +40,8 @@
     "jsdom": "~22.1.0",
     "nx": "19.8.14",
     "prettier": "^2.6.2",
+    "rollup": "^4.14.0",
+    "swc-loader": "0.1.15",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
