--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "paths": {
       "@cavallanti-ui/": ["packages/grid/src/index.ts"],
       "@cavallanti-ui/button": ["packages/button/src/index.ts"],
-      "@cavallanti-ui/header": ["packages/header/src/index.ts"]
+      "@cavallanti-ui/header": ["packages/header/src/index.ts"],
+      "@cavallanti-ui/navbar": ["packages/navbar/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
