feat: implement grid

--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cavallanti-ui/",
+  "name": "@cavallanti-ui/grid",
   "version": "0.0.1",
   "main": "./index.js",
   "types": "./index.d.ts",
