--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,4 +32,4 @@ jobs:
         run: npx nx run-many --target=build --all=true
 
       - name: Publish to NPM
-        run: npx nx run-many --target=publish --all --parallel=3
+        run: npx nx run-many --target=nx-release-publish --all --parallel=3
